--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.0.2",
         "ext-intl": "*",
         "guzzlehttp/guzzle": "^7.2",
+        "hackzilla/password-generator": "^1.6",
         "kblais/laravel-uuid": "^2.0",
         "laravel/framework": "^9.11",
         "laravel/passport": "^10.4",
