--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.0.2",
         "ext-intl": "*",
+        "1foru/php-html-parser": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
         "hackzilla/password-generator": "^1.6",
         "kblais/laravel-uuid": "^2.0",
@@ -33,6 +34,16 @@
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "https://github.com/1forU/php-html-parser.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "https://github.com/1forU/string-encoder.git"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
